Adding JMX based Service Info Collector.